pre fix for wrapping

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -413,6 +413,10 @@
 
 /* 5. Main */
 
+pre {
+	white-space: normal;
+}
+
 .contain {
 	padding: 30px;
 	margin: 0 auto;
